[project]
name = "to-webp"
version = "0.1.0"
description = "command line utility to quickly convert a directory containing image files of various formats to webp with lossless compression"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow-heif>=0.22.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.10",
]
